@@ -1185,7 +1185,7 @@ div.v-subheader {
  margin:auto;
 }
 
-.np-no-meta-img {
+.np-mai-img {
  object-fit:contain;
  object-position:50% 50%;
  margin-left:auto;
