@@ -56,6 +56,8 @@
     sleep dialog.
 44. Increase toolbar background blur.
 45. Remove fade in of now-playing cover change.
+46. Swipe up from now-playing text to show MAI.
+47. Swipe down on MAI artist/album image to close MAI.
 
 4.0.4
 -----
